--- a/BlazorApp1/Pages/MyNavMenu.razor
+++ b/BlazorApp1/Pages/MyNavMenu.razor
@@ -1,9 +1,9 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="/intergralList" Match="NavLinkMatch.All">积分列表</MudNavLink>
-    <MudNavLink Href="/servers" Match="NavLinkMatch.Prefix">Servers</MudNavLink>
+    @*<MudNavLink Href="/servers" Match="NavLinkMatch.Prefix">Servers</MudNavLink>
     <MudNavGroup Title="Settings" Expanded="true">
         <MudNavLink Href="/users"  Match="NavLinkMatch.Prefix">Users</MudNavLink>
         <MudNavLink Href="/security"  Match="NavLinkMatch.Prefix">Security</MudNavLink>
     </MudNavGroup>
-    <MudNavLink Href="/about"  Match="NavLinkMatch.Prefix">About</MudNavLink>
+    <MudNavLink Href="/about"  Match="NavLinkMatch.Prefix">About</MudNavLink>*@
 </MudNavMenu>
