--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@using BlazorApp1.Pages
 @inherits LayoutComponentBase
 
-<PageTitle>BlazorApp1</PageTitle>
+<PageTitle>积分系统</PageTitle>
 
 <MudThemeProvider/>
 <MudDialogProvider/>
