增加柱状图

--- a/BlazorApp1/Pages/MyNavMenu.razor
+++ b/BlazorApp1/Pages/MyNavMenu.razor
@@ -6,4 +6,7 @@
         <MudNavLink Href="/security"  Match="NavLinkMatch.Prefix">Security</MudNavLink>
     </MudNavGroup>
     <MudNavLink Href="/about"  Match="NavLinkMatch.Prefix">About</MudNavLink>*@
+    @*<MudNavGroup Title="Charts" Expanded="true">
+        <MudNavLink Href="/bar" Match="NavLinkMatch.Prefix">积分增长对比图</MudNavLink>
+    </MudNavGroup>*@
 </MudNavMenu>
