--- a/BlazorApp1/Pages/IntergralTable.razor
+++ b/BlazorApp1/Pages/IntergralTable.razor
@@ -9,8 +9,9 @@
 
 <MudTable Items="_userIntergrals" @bind-SelectedItem="_selectItem" CommitEditTooltip="保存" CanCancelEdit="true"
           RowEditPreview="BackupItem" RowEditCancel="ResetItemToOriginalValues" RowEditCommit="EditCommit"
-          IsEditRowSwitchingBlocked="false"
-          Hover="true" Striped="true" Filter="_filter" Breakpoint="Breakpoint.Sm" Loading="_isLoading"
+          IsEditRowSwitchingBlocked="false" OnCommitEditClick="@(() => {AddSnackbar("保存成功");_isEditing=false;})"
+          Hover="true" Striped="true" Filter="_filter" Breakpoint="Breakpoint.Sm"
+          OnCancelEditClick="e=> _isEditing=false " 
           LoadingProgressColor="Color.Info" FixedHeader="true" FixedFooter="true">
     <ToolBarContent>
         <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.AddCircle" Color="Color.Primary" OnClick="Add">新增</MudButton>
@@ -21,6 +22,7 @@
         <MudTh><MudTableSortLabel SortBy="new Func<UserIntergral, object>(x=>x.Id)">ID</MudTableSortLabel></MudTh>
         <MudTh>姓名</MudTh>
         <MudTh>手机号</MudTh>
+        <MudTh Style="@(_isEditing?"":"display:none;")">积分变动数</MudTh>
         <MudTh><MudTableSortLabel SortBy="new Func<UserIntergral, object>(x=>x.Intergral)">积分</MudTableSortLabel></MudTh>
         <MudTh><MudTableSortLabel SortBy="new Func<UserIntergral, object>(x=>x.CreateTime)">创建时间</MudTableSortLabel></MudTh>
         <MudTh><MudTableSortLabel SortBy="new Func<UserIntergral, object>(x=>x.UpdateTime)">更新时间</MudTableSortLabel></MudTh>
@@ -29,9 +31,10 @@
         <MudTd DataLabel="ID">@context.Id</MudTd>
         <MudTd DataLabel="Name">@context.Name</MudTd>
         <MudTd DataLabel="Phone">@context.Phone</MudTd>
+        <MudTd Style="@(_isEditing?"":"display:none;")" DataLabel="Increament">0</MudTd>
         <MudTd DataLabel="Intergral">@context.Intergral</MudTd>
-        <MudTd DataLabel="Intergral">@DateTimeOffset.FromUnixTimeSeconds(context.CreateTime).ToLocalTime().DateTime</MudTd>
-        <MudTd DataLabel="Intergral">@DateTimeOffset.FromUnixTimeSeconds(context.UpdateTime).ToLocalTime().DateTime</MudTd>
+        <MudTd DataLabel="CreateTime">@DateTimeOffset.FromUnixTimeSeconds(context.CreateTime).ToLocalTime().DateTime</MudTd>
+        <MudTd DataLabel="UpdateTime">@DateTimeOffset.FromUnixTimeSeconds(context.UpdateTime).ToLocalTime().DateTime</MudTd>
     </RowTemplate>
     <RowEditingTemplate>
         <MudTd DataLabel="ID">@context.Id</MudTd>
@@ -41,19 +44,24 @@
         <MudTd DataLabel="Phone">
             <MudTextField @bind-Value="@context.Phone" Required></MudTextField>
         </MudTd>
-        <MudTd DataLabel="Intergral">
-            <MudNumericField Step=".5M" @bind-Value="@context.Intergral" Required></MudNumericField>
+        <MudTd Style="@(_isEditing?"":"display:none;")" DataLabel="Increment">
+            <MudNumericField Step=".5M" @bind-Value="@context.Increament" Required></MudNumericField>
         </MudTd>
-        <MudTd DataLabel="Intergral">@DateTimeOffset.FromUnixTimeSeconds(context.CreateTime).ToLocalTime().DateTime</MudTd>
-        <MudTd DataLabel="Intergral">@DateTimeOffset.FromUnixTimeSeconds(context.UpdateTime).ToLocalTime().DateTime</MudTd>
-    </RowEditingTemplate>
-    <PagerContent>
-        <MudTablePager />
-    </PagerContent>
-</MudTable>
+        <MudTd DataLabel="Intergral">@(context.Intergral + context.Increament)</MudTd>
+            <MudTd DataLabel="CreateTime">@DateTimeOffset.FromUnixTimeSeconds(context.CreateTime).ToLocalTime().DateTime</MudTd>
+            <MudTd DataLabel="UpdateTime">@DateTimeOffset.FromUnixTimeSeconds(context.UpdateTime).ToLocalTime().DateTime</MudTd>
+        </RowEditingTemplate>
+        <PagerContent>
+            <MudTablePager />
+        </PagerContent>
+    </MudTable>
+    <style>
+        .hide {
+            display: none;
+        }
+    </style>
 
-@code {
-    private bool _isLoading = true;
+    @code {
 
     private List<UserIntergral> _userIntergrals = new List<UserIntergral>();
 
@@ -61,6 +69,7 @@
 
     private UserIntergral _selectItem;
     private UserIntergral _editingItem = new UserIntergral();
+    private bool _isEditing;
 
     private bool _filter(UserIntergral item)
     {
@@ -75,7 +84,6 @@
     protected override void OnInitialized()
     {
         _userIntergrals = service.GetAll();
-        _isLoading = false;
     }
 
     private void BackupItem(object element)
@@ -84,6 +92,7 @@
         _editingItem.Name = before.Name;
         _editingItem.Phone = before.Phone;
         _editingItem.Intergral = before.Intergral;
+        _isEditing = true;
     }
 
     private void ResetItemToOriginalValues(object element)
@@ -92,17 +101,17 @@
         notCommitItem.Name = _editingItem.Name;
         notCommitItem.Phone = _editingItem.Phone;
         notCommitItem.Intergral = _editingItem.Intergral;
+        notCommitItem.Increament = 0;
     }
 
     private void EditCommit(object element)
     {
-        _isLoading = true;
         var after = element as UserIntergral;
+        after.Intergral += after.Increament;
         after.UpdateTime = (int)DateTimeOffset.UtcNow.ToUnixTimeSeconds();
         service.Update(after);
         _userIntergrals = service.GetAll();
         AddSnackbar("更新成功");
-        _isLoading = false;
     }
 
     private async Task Add(MouseEventArgs args)
@@ -113,9 +122,7 @@
         if (!result.Cancelled)
         {
             AddSnackbar("新增用户成功");
-            _isLoading = true;
             _userIntergrals = service.GetAll();
-            _isLoading = false;
         }
     }
 
